--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "swiftmailer/swiftmailer": "~4.2",
         "knplabs/repository-service-provider": "dev-master@dev",
         "insolis/facebook-service-provider": "dev-master@dev",
-        "ircmaxell/password-compat": "~1.0"
+        "ircmaxell/password-compat": "~1.0",
+        "silex/web-profiler": "~1.0@dev"
     },
 
     "autoload": {
