--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
     "require": {
-        "silex/silex": "~1.0",
+        "silex/silex": "1.1.*",
         "twig/twig": "1.*",
         "monolog/monolog": "1.*",
         "doctrine/dbal": "2.*",
 
-        "symfony/config": "2.2.*",
-        "symfony/console": "2.2.*",
-        "symfony/form": "2.2.*",
-        "symfony/validator": "2.2.*",
-        "symfony/translation": "2.2.*",
-        "symfony/twig-bridge": "2.2.*",
+        "symfony/config": "2.3.*",
+        "symfony/console": "2.3.*",
+        "symfony/form": "2.3.*",
+        "symfony/validator": "2.3.*",
+        "symfony/translation": "2.3.*",
+        "symfony/twig-bridge": "2.3.*",
 
-        "swiftmailer/swiftmailer": "~5.0",
+        "swiftmailer/swiftmailer": "5.*",
         "knplabs/repository-service-provider": "dev-master@dev",
         "insolis/facebook-service-provider": "dev-master@dev",
-        "ircmaxell/password-compat": "~1.0",
-        "silex/web-profiler": "~1.0"
+        "ircmaxell/password-compat": "1.*",
+        "silex/web-profiler": "1.*"
     },
 
     "autoload": {
