--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 
         "symfony/config": "2.3.*",
         "symfony/console": "2.3.*",
+        "symfony/finder": "2.3.*",
         "symfony/form": "2.3.*",
         "symfony/validator": "2.3.*",
         "symfony/translation": "2.3.*",
