--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/twig-bridge": "2.3.*",
 
         "swiftmailer/swiftmailer": "5.*",
-        "knplabs/repository-service-provider": "dev-master@dev",
+        "insolis/repository-service-provider": "1.*",
         "insolis/facebook-service-provider": "dev-master@dev",
         "ircmaxell/password-compat": "1.*",
         "silex/web-profiler": "1.*"
