--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,13 @@
         "fp/lightopenid": "dev-master@dev"
     },
 
+    "require-dev": {
+        "behat/behat": "2.4.*",
+        "phpunit/phpunit": "3.7.*",
+        "symfony/browser-kit": "2.3.*",
+        "symfony/dom-crawler": "2.3.*"
+    },
+
     "autoload": {
         "psr-0": {
             "bDone": "src/"
