--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
 
     "require-dev": {
         "behat/behat": "2.4.*",
+        "behat/mink": "1.5.*",
+        "behat/mink-browserkit-driver": "1.1.*",
+        "behat/mink-selenium2-driver": "1.1.*",
         "phpunit/phpunit": "3.7.*",
         "symfony/browser-kit": "2.3.*",
         "symfony/dom-crawler": "2.3.*"
