--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
         "behat/mink-selenium2-driver": "1.1.*",
         "phpunit/phpunit": "3.7.*",
         "symfony/browser-kit": "2.3.*",
-        "symfony/dom-crawler": "2.3.*"
+        "symfony/dom-crawler": "2.3.*",
+        "behat/mink-extension": "*",
+        "behat/mink-goutte-driver": "*",
+        "behat/mink-sahi-driver": "*"
     },
 
     "autoload": {
